feat: prepare harid ejs page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "michael",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
