--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "reja": "file:"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
