--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mongodb": "^3.2.6",
     "reja": "file:"
   },
